src/parser/TSmmParser.java
// Generated from C:/Users/Windows/Desktop/tercerAno/segundoCuatri/DLP/LABS/proyectos/Codigo_V1/src/parser/TSmm.g4 by ANTLR 4.13.2
package parser;

import ast.expression.Expression;
import ast.expression.literals.*;
import ast.*;
import ast.expression.*;
import ast.definition.*;
import ast.expression.literals.IntLiteral;
import ast.expression.literals.Variable;
import ast.expression.operations.*;
import ast.statement.*;
import ast.type.*;
import java.util.List;
import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TSmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, INT_CONSTANT=40, REAL_CONSTANT=41, CHAR_CONSTANT=42, ID=43, 
		COMMENT_UNALINEA=44, COMMENT_VARIASLINEAS=45, WHITESPACES=46;
	public static final int
		RULE_program = 0, RULE_definition = 1, RULE_varDefinition = 2, RULE_functionDefinition = 3, 
		RULE_mainFunction = 4, RULE_parameters = 5, RULE_param = 6, RULE_returnType = 7, 
		RULE_simpleType = 8, RULE_type = 9, RULE_array = 10, RULE_struct = 11, 
		RULE_statement = 12, RULE_block = 13, RULE_expression = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definition", "varDefinition", "functionDefinition", "mainFunction", 
			"parameters", "param", "returnType", "simpleType", "type", "array", "struct", 
			"statement", "block", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'let'", "','", "':'", "';'", "'function'", "'('", "')'", "'{'", 
			"'}'", "'main'", "'void'", "'char'", "'int'", "'number'", "'['", "']'", 
			"'='", "'while'", "'if'", "'else'", "'return'", "'log'", "'input'", "'.'", 
			"'as'", "'-'", "'!'", "'*'", "'%'", "'/'", "'+'", "'>'", "'>='", "'<'", 
			"'<='", "'!='", "'=='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", 
			"ID", "COMMENT_UNALINEA", "COMMENT_VARIASLINEAS", "WHITESPACES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TSmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TSmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast = null;
		public DefinitionContext d1;
		public MainFunctionContext m;
		public TerminalNode EOF() { return getToken(TSmmParser.EOF, 0); }
		public MainFunctionContext mainFunction() {
			return getRuleContext(MainFunctionContext.class,0);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			 ((ProgramContext)_localctx).ast =  new Program(new ArrayList<>()); 
			setState(36);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(31);
					((ProgramContext)_localctx).d1 = definition();
					 _localctx.ast.addDefinitions(((ProgramContext)_localctx).d1.ast); 
					}
					} 
				}
				setState(38);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(39);
			((ProgramContext)_localctx).m = mainFunction();

			          List<Definition> mainList = new ArrayList<>();
			          mainList.add(((ProgramContext)_localctx).m.ast);
			          _localctx.ast.addDefinitions(mainList);
			      
			setState(41);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<>();
		public VarDefinitionContext v;
		public FunctionDefinitionContext f;
		public VarDefinitionContext varDefinition() {
			return getRuleContext(VarDefinitionContext.class,0);
		}
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				((DefinitionContext)_localctx).v = varDefinition();
				 _localctx.ast.addAll(((DefinitionContext)_localctx).v.ast); 
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				((DefinitionContext)_localctx).f = functionDefinition();
				 _localctx.ast.add(((DefinitionContext)_localctx).f.ast); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDefinitionContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<>();
		public List<Token> idList = new ArrayList<>();
		public Token OP;
		public Token id1;
		public Token id2;
		public TypeContext t;
		public List<TerminalNode> ID() { return getTokens(TSmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TSmmParser.ID, i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefinition; }
	}

	public final VarDefinitionContext varDefinition() throws RecognitionException {
		VarDefinitionContext _localctx = new VarDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			((VarDefinitionContext)_localctx).OP = match(T__0);
			setState(52);
			((VarDefinitionContext)_localctx).id1 = match(ID);
			 _localctx.idList.add(((VarDefinitionContext)_localctx).id1); 
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(54);
				match(T__1);
				setState(55);
				((VarDefinitionContext)_localctx).id2 = match(ID);
				 _localctx.idList.add(((VarDefinitionContext)_localctx).id2); 
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			match(T__2);
			setState(63);
			((VarDefinitionContext)_localctx).t = type();
			setState(64);
			match(T__3);

			        for (Token idToken : _localctx.idList) {
			            _localctx.ast.add(new VarDefinition(((VarDefinitionContext)_localctx).OP.getLine(), ((VarDefinitionContext)_localctx).OP.getCharPositionInLine() + 1, idToken.getText(), ((VarDefinitionContext)_localctx).t.ast));
			        }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefinitionContext extends ParserRuleContext {
		public FunctionDefinition ast = null;
		public List<VarDefinition> paramsList = new ArrayList<>();
		public Type retType = VoidType.getInstance();
		public Token OP;
		public Token ID;
		public ParametersContext p;
		public ReturnTypeContext r;
		public VarDefinitionContext v;
		public StatementContext s;
		public TerminalNode ID() { return getToken(TSmmParser.ID, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			((FunctionDefinitionContext)_localctx).OP = match(T__4);
			setState(68);
			((FunctionDefinitionContext)_localctx).ID = match(ID);
			setState(69);
			match(T__5);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(70);
				((FunctionDefinitionContext)_localctx).p = parameters();
				 ((FunctionDefinitionContext)_localctx).paramsList =  ((FunctionDefinitionContext)_localctx).p.ast; 
				}
			}

			setState(75);
			match(T__6);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(76);
				match(T__2);
				setState(77);
				((FunctionDefinitionContext)_localctx).r = returnType();
				 ((FunctionDefinitionContext)_localctx).retType =  ((FunctionDefinitionContext)_localctx).r.ast; 
				}
			}


			          Type funcType = new FunctionType(_localctx.paramsList, _localctx.retType);
			          ((FunctionDefinitionContext)_localctx).ast =  new FunctionDefinition(((FunctionDefinitionContext)_localctx).OP.getLine(), ((FunctionDefinitionContext)_localctx).OP.getCharPositionInLine() + 1, ((FunctionDefinitionContext)_localctx).ID.getText(), funcType, new ArrayList<>());
			      
			setState(83);
			match(T__7);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(84);
				((FunctionDefinitionContext)_localctx).v = varDefinition();

				              for(VarDefinition varDef : ((FunctionDefinitionContext)_localctx).v.ast) {
				                  _localctx.ast.addStatement(varDef);
				              }
				          
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 16492891209792L) != 0)) {
				{
				{
				setState(92);
				((FunctionDefinitionContext)_localctx).s = statement();
				 _localctx.ast.addStatement(((FunctionDefinitionContext)_localctx).s.ast); 
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainFunctionContext extends ParserRuleContext {
		public FunctionDefinition ast = null;
		public Token OP;
		public VarDefinitionContext v;
		public StatementContext s;
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFunction; }
	}

	public final MainFunctionContext mainFunction() throws RecognitionException {
		MainFunctionContext _localctx = new MainFunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mainFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			((MainFunctionContext)_localctx).OP = match(T__4);
			setState(103);
			match(T__9);
			setState(104);
			match(T__5);
			setState(105);
			match(T__6);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(106);
				match(T__2);
				setState(107);
				match(T__10);
				}
			}


			          Type funcType = new FunctionType(new ArrayList<>(), VoidType.getInstance());
			          ((MainFunctionContext)_localctx).ast =  new FunctionDefinition(((MainFunctionContext)_localctx).OP.getLine(), ((MainFunctionContext)_localctx).OP.getCharPositionInLine() + 1, "main", funcType, new ArrayList<>());
			      
			setState(111);
			match(T__7);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(112);
				((MainFunctionContext)_localctx).v = varDefinition();

				              for(VarDefinition varDef : ((MainFunctionContext)_localctx).v.ast) {
				                  _localctx.ast.addStatement(varDef);
				              }
				          
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 16492891209792L) != 0)) {
				{
				{
				setState(120);
				((MainFunctionContext)_localctx).s = statement();
				 _localctx.ast.addStatement(((MainFunctionContext)_localctx).s.ast); 
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametersContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<>();
		public ParamContext p1;
		public ParamContext p2;
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			((ParametersContext)_localctx).p1 = param();
			 _localctx.ast.add(((ParametersContext)_localctx).p1.ast); 
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(132);
				match(T__1);
				setState(133);
				((ParametersContext)_localctx).p2 = param();
				 _localctx.ast.add(((ParametersContext)_localctx).p2.ast); 
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public VarDefinition ast = null;
		public Token ID;
		public SimpleTypeContext t;
		public TerminalNode ID() { return getToken(TSmmParser.ID, 0); }
		public SimpleTypeContext simpleType() {
			return getRuleContext(SimpleTypeContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			((ParamContext)_localctx).ID = match(ID);
			setState(142);
			match(T__2);
			setState(143);
			((ParamContext)_localctx).t = simpleType();
			 ((ParamContext)_localctx).ast =  new VarDefinition(((ParamContext)_localctx).ID.getLine(), ((ParamContext)_localctx).ID.getCharPositionInLine() + 1, ((ParamContext)_localctx).ID.getText(), ((ParamContext)_localctx).t.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnTypeContext extends ParserRuleContext {
		public Type ast = null;
		public SimpleTypeContext t;
		public SimpleTypeContext simpleType() {
			return getRuleContext(SimpleTypeContext.class,0);
		}
		public ReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnType; }
	}

	public final ReturnTypeContext returnType() throws RecognitionException {
		ReturnTypeContext _localctx = new ReturnTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_returnType);
		try {
			setState(151);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
			case T__12:
			case T__13:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				((ReturnTypeContext)_localctx).t = simpleType();
				 ((ReturnTypeContext)_localctx).ast =  ((ReturnTypeContext)_localctx).t.ast; 
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				match(T__10);
				 ((ReturnTypeContext)_localctx).ast =  VoidType.getInstance(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
